--- a/index.html
+++ b/index.html
@@ -12,9 +12,12 @@
 <body>
     <div class="jumbotron">
         <h1>wordGuess</h1>
+        
     </div>
-    <div class="text-center">word:<span type="text" id="displayRandom"></span></div>
-
+    <div class="text-center">Word: <span type="text" id="displayRandom"></span></div>
+    <br>
+    <div class="text-center">Guesses: <span id="myGuesses"></span></div>
+    <div class="text-center">Guess Count: <span id="count"></span></div>
 
     <script src="./assets/javascript/main.js"></script>
 </body>
